Added the friend routes and controller. Also added the updatePassword route, its controller and validator for users. Also added the route for latest followings posts and a class method for it.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
-node_modules
-dev/
 .idea/
+dev/
+node_modules
 public/javascripts/
 public/stylesheets/
+public/images/
 public/fonts/
+storage/
 .env
 mix-manifest.json
 package-lock.json
