--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start-server": "node ./bin/www",
+    "start": "node ./bin/www",
     "watch-server": "nodemon ./bin/www",
     "dev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "watch": "npm run dev -- --watch",
@@ -12,13 +12,27 @@
     "prod": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "dotenv":"^8.2.0",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "bcrypt": "3.0.6",
+    "cookie-parser": "^1.4.4",
+    "csurf": "^1.10.0",
+    "debug": "^2.6.9",
+    "dotenv": "^8.2.0",
+    "events": "^3.0.0",
+    "express": "^4.16.4",
+    "express-fileupload": "^1.1.6",
+    "fs": "0.0.1-security",
+    "http": "0.0.0",
+    "http-errors": "^1.6.3",
+    "indicative": "^7.2.3",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.9.1",
+    "nodemailer": "^6.3.1",
+    "path": "^0.12.7",
+    "pg": "^7.13.0",
+    "pug": "2.0.0-beta11",
+    "sequelize": "^5.21.2",
+    "sequelize-paginate": "^1.1.6",
+    "sqlite": "^3.0.3"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.9.0",
