--- a/package.json
+++ b/package.json
@@ -13,26 +13,26 @@
   },
   "dependencies": {
     "bcrypt": "3.0.6",
-    "cookie-parser": "^1.4.4",
-    "csurf": "^1.10.0",
-    "debug": "^2.6.9",
-    "dotenv": "^8.2.0",
-    "events": "^3.0.0",
-    "express": "^4.16.4",
-    "express-fileupload": "^1.1.6",
+    "cookie-parser": "1.4.4",
+    "csurf": "1.10.0",
+    "debug": "2.6.9",
+    "dotenv": "8.2.0",
+    "events": "3.0.0",
+    "express": "4.16.4",
+    "express-fileupload": "1.1.6",
+    "express-subdomain": "1.0.5",
     "fs": "0.0.1-security",
     "http": "0.0.0",
-    "http-errors": "^1.6.3",
-    "indicative": "^7.2.3",
-    "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.9.1",
-    "nodemailer": "^6.3.1",
-    "path": "^0.12.7",
-    "pg": "^7.13.0",
+    "http-errors": "1.6.3",
+    "indicative": "7.2.3",
+    "jsonwebtoken": "8.5.1",
+    "morgan": "1.9.1",
+    "nodemailer": "6.3.1",
+    "path": "0.12.7",
+    "pg": "7.13.0",
     "pug": "2.0.0-beta11",
-    "sequelize": "^5.21.2",
-    "sequelize-paginate": "^1.1.6",
-    "sqlite": "^3.0.3"
+    "sequelize": "5.21.2",
+    "sequelize-paginate": "1.1.6"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.9.0",
@@ -47,6 +47,7 @@
     "resolve-url-loader": "^2.3.1",
     "sass": "^1.22.4",
     "sass-loader": "^7.1.0",
+    "sqlite": "3.0.3",
     "sweetalert2": "^8.13.5",
     "vform": "^1.0.1",
     "vue": "^2.5.17",
