--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "VueExpress",
-  "version": "0.0.0",
+  "name": "ihub",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start-server": "node ./bin/www",
@@ -9,14 +9,13 @@
     "watch": "npm run dev -- --watch",
     "watch-poll": "npm run watch -- --watch-poll",
     "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "prod": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "prod": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "dependencies": {
     "bcrypt": "3.0.6",
     "cookie-parser": "1.4.4",
-    "csurf": "1.10.0",
+    "cors": "2.8.5",
     "debug": "2.6.9",
-    "dotenv": "8.2.0",
     "events": "3.0.0",
     "express": "4.16.4",
     "express-fileupload": "1.1.6",
@@ -40,8 +39,10 @@
     "bootstrap": "^4.1.0",
     "chalk": "^2.4.2",
     "cross-env": "^5.1",
+    "dotenv": "8.2.0",
     "jquery": "^3.4.1",
     "laravel-mix": "^4.1.2",
+    "laravel-mix-bundle-analyzer": "1.0.2",
     "lodash": "^4.17.14",
     "popper.js": "^1.12",
     "resolve-url-loader": "^2.3.1",
@@ -52,9 +53,12 @@
     "vform": "^1.0.1",
     "vue": "^2.5.17",
     "vue-i18n": "^8.12.0",
+    "vue-cookies": "^1.5.13",
     "vue-template-compiler": "^2.6.10",
     "vue-progressbar": "^0.7.5",
     "vue-router": "^3.0.7",
+    "vuetify": "^2.1.11",
+    "vuetify-loader": "^1.3.0",
     "vuex": "^3.1.1"
   }
 }
