Fixed api routing for Heroku

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME= VueExpress
+APP_NAME= iHub
 
 SESSION_KEY= OurSessionKey
 
@@ -8,7 +8,7 @@ MAIL_PORT= 2525
 MAIL_USERNAME= 5799f804bdb139
 MAIL_PASSWORD= 839e55be21c9c7
 MAIL_ENCRYPTION= null
-MAIL_FROM_ADDRESS= VueExpress@test.com
-MAIL_FROM_NAME= VueExpress
+MAIL_FROM_ADDRESS= noreply@ihub.com
+MAIL_FROM_NAME= iHub
 
 FILE_UPLOAD_LIMIT= 10
